tests/ui/transmute-ref-src-not-intobytes.msrv.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/transmute-ref-src-not-intobytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
note: required by `AssertSrcIsIntoBytes`
  --> $DIR/transmute-ref-src-not-intobytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/transmute-ref-src-not-intobytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsIntoBytes`
  --> $DIR/transmute-ref-src-not-intobytes.rs:22:33
   |
22 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
